@@ -1,0 +1,13 @@
+<script>
+if (window.layoutTestController)
+    layoutTestController.display();
+</script>
+This tests that the scrollbar and resize corner are not visible on an element that has visibility:hidden.
+<div style="overflow: auto; width: 50px; height: 70px; resize: both; visibility: hidden">
+You
+should
+not
+see
+this
+text
+</div>
