@@ -1,3 +1,15 @@
+2007-06-25  Adele Peterson  <adele@apple.com>
+
+        Reviewed by Hyatt.
+
+        Test for: <rdar://problem/5286410> Scrollbar and resize corner for overflow area is not hidden with style "visibility: hidden;"
+        http://bugs.webkit.org/show_bug.cgi?id=14297
+
+        * fast/overflow/hidden-scrollbar-resize-expected.checksum: Added.
+        * fast/overflow/hidden-scrollbar-resize-expected.png: Added.
+        * fast/overflow/hidden-scrollbar-resize-expected.txt: Added.
+        * fast/overflow/hidden-scrollbar-resize.html: Added.
+
 2007-06-25  Mitz Pettel  <mitz@webkit.org>
 
         Reviewed by Darin.
